implementacao novo idioma

--- a/public/static/locales/en.json
+++ b/public/static/locales/en.json
@@ -1,18 +1,23 @@
 {
-    "app_title": "Atlas of Oportunidades",
+    "app_title": "Atlas of Opportunities",
     "active_locale": "en",
-    "menu_1": "O projeto",
-    "menu_2": "Colaboradores",
-    "menu_3": "Perfil de dados",
+    "menu_1": "The project",
+    "menu_2": "Collaborators",
+    "menu_3": "Data profile",
     "menu_4": "Tutorial",
-    "menu_5": "Grupo de pesquisa",
-    "btn_ir_atlas": "Ir para o atlas",
-    "btn_saiba_mais": "Saiba mais...",
-    "btn_ver_todos": "Ver todos",
-    "page_1_header": "Descubra o poder da ciência de dados e da Inteligência Artificial para impulsionar o desenvolvimento!",
-    "page_1_header_sub": "O Atlas de Oportunidades é um projeto open-source materializado num site gratuito de apoio à decisão que visa ajudar empreendedores, empresas, governos e outros púbicos interessados em identificar oportunidades de negócios. O projeto combina várias fontes de dados, processadas com ciência de dados espaciais e algoritmos de Inteligência Artificial. O Atlas traduz as teorias e métodos científicos mais avançados das áreas de administração, estatística e ciência da computação num site simples, intuitivo e interativo voltado à geração de empregos, renda e fomentar o desenvolvimento econômico sustentável.",
-    "page_1_rede_title": "Rede de colaboração",
-    "page_1_perfil_title": "O Atlas de Oportunidades integra uma vasta gama de dados provenientes de diversas fontes de pesquisa, como o IBGE, o REGIC, o Banco Central do Brasil, dentre outras. Analisamos, processamos e entregamos informações de qualidade em diferentes níveis geográficos, abrangendo estados, cidades e até mesmo dados censitários. Mas não paramos por aí. Para facilitar ainda mais a sua jornada de descoberta, utilizamos como base a classificação de Smart Cities do Urban Systems (2018). Essa classificação nos permite organizar as diversas variáveis disponíveis em nossa plataforma, proporcionando uma visualização aprimorada e facilitando a consulta por dados de seu interesse específico.",
-    "footer_contato": "Contato",
-    "footer_rights": "© 2023 Atlas de Oportunidades | Todos os direitos reservados."
+    "menu_5": "Search group",
+    "btn_ir_atlas": "Go to atlas",
+    "btn_saiba_mais": "Know more...",
+    "btn_ver_todos": "See all",
+    "page_1_header": "Discover the power of data science and Artificial Intelligence to drive development!",
+    "page_1_header_sub": "The Atlas of Opportunities is an open-source project materialized in a free decision support website that aims to help entrepreneurs, companies, governments and other publics interested in identifying business opportunities. The project combines multiple data sources, processed with spatial data science and Artificial Intelligence algorithms. The Atlas translates the most advanced scientific theories and methods in the areas of management, statistics and computer science into a simple, intuitive and interactive website aimed at generating jobs, income and fostering sustainable economic development.",
+    "page_1_rede_title": "Collaboration Network",
+    "page_1_perfil_title_1": "The Atlas of Opportunities integrates a wide range of data from different research sources, such as the IBGE, REGIC, and the Central Bank of Brazil. We analyze, process, and deliver quality information at various geographic levels, covering states, cities, and census blocks data. But we don't stop there. To further facilitate your journey of discovery, we use the Urban Systems Smart Cities classification  Citie as a basis. This classification allows us to organize the various variables available on our platform, providing an improved visualization and facilitating the query for data of your specific interest.",
+    "page_1_perfil_title_2": "In an increasingly dynamic and competitive world, having up-to-date and accurate information is essential for making strategic decisions. Our platform offers a complete and engaging experience, allowing you to explore business opportunities based on your interests and needs. Join us and gain access to a universe of strategic data. Discover new possibilities, identify trends and drive your success.",
+    "page_1_publications": "Publications",
+    "footer_contato": "Contact",
+    "footer_rights": "© 2023 Atlas of Opportunities | All rights reserved.",
+    "address_pt_1": "Federal University of Rio Grande do Sul (UFRGS)",
+    "address_pt_2": "School of Management, Rua Washington Luis, 855",
+    "address_pt_3": "Porto Alegre/RS/Brazil, 90010-460"
 }
