--- a/public/static/locales/en.json
+++ b/public/static/locales/en.json
@@ -5,7 +5,7 @@
     "menu_2": "Collaborators",
     "menu_3": "Data profile",
     "menu_4": "Tutorial",
-    "menu_5": "Search group",
+    "menu_5": "Research lab",
     "btn_ir_atlas": "Go to atlas",
     "btn_saiba_mais": "Know more...",
     "btn_ver_todos": "See all",
