implementacao tela colaboradores pt1

--- a/public/static/locales/en.json
+++ b/public/static/locales/en.json
@@ -19,5 +19,7 @@
     "footer_rights": "© 2023 Atlas of Opportunities | All rights reserved.",
     "address_pt_1": "Federal University of Rio Grande do Sul (UFRGS)",
     "address_pt_2": "School of Management, Rua Washington Luis, 855",
-    "address_pt_3": "Porto Alegre/RS/Brazil, 90010-460"
+    "address_pt_3": "Porto Alegre/RS/Brazil, 90010-460",
+    "page_2_title_1": "Current team",
+    "page_2_title_2": "Ex-members"
 }
