--- a/public/static/locales/pt.json
+++ b/public/static/locales/pt.json
@@ -19,5 +19,8 @@
     "footer_rights": "© 2023 Atlas de Oportunidades | Todos os direitos reservados.",
     "address_pt_1": "Universidade Federal do Rio Grande do Sul (UFRGS)",
     "address_pt_2": "Escola de Adminstração, Rua Washington Luis, 855",
-    "address_pt_3": "Porto Alegre/RS/Brasil, 90010-460"
+    "address_pt_3": "Porto Alegre/RS/Brasil, 90010-460",
+    "page_2_title_1": "Equipe Atual",
+    "page_2_title_2": "Ex-membros"
+
 }
