inicio de implementacao de tela de perfil de dados

--- a/public/static/locales/pt.json
+++ b/public/static/locales/pt.json
@@ -21,6 +21,13 @@
     "address_pt_2": "Escola de Adminstração, Rua Washington Luis, 855",
     "address_pt_3": "Porto Alegre/RS/Brasil, 90010-460",
     "page_2_title_1": "Equipe Atual",
-    "page_2_title_2": "Ex-membros"
+    "page_2_title_2": "Ex-membros",
+    "page_3_title_1": "Perfil de dados",
+    "page_3_t1_content_1": "O Atlas de Oportunidades integra uma vasta gama de dados provenientes de diversas fontes de pesquisa, como o IBGE, o REGIC, o Banco Central do Brasil, dentre outras. Analisamos, processamos e entregamos informações de qualidade em diferentes níveis geográficos, abrangendo estados, cidades e até mesmo dados censitários. Mas não paramos por aí. Para facilitar ainda mais a sua jornada de descoberta, utilizamos como base a classificação de Smart Cities do Urban Systems (2018). Essa classificação nos permite organizar as diversas variáveis disponíveis em nossa plataforma, proporcionando uma visualização aprimorada e facilitando a consulta por dados de seu interesse específico.",
+    "page_3_t1_content_2": "Em um mundo cada vez mais dinâmico e competitivo, contar com informações atualizadas e precisas é fundamental para tomar decisões estratégicas. Nossa plataforma oferece uma experiência completa e envolvente, permitindo que você explore oportunidades de negócios com base nos seus interesses e necessidades. Junte-se a nós e tenha acesso a um universo de dados estratégicos. Descubra novas possibilidades, identifique tendências e impulsione o seu sucesso.",
+    "page_3_title_2": "Dimensões dos dados",
+    "page_3_demo_title": "Demográfica",
+    "page_3_demo_content": "A dimensão \"dados demográficos\" refere-se à coleta, análise e interpretação de dados relacionados às características das populações. Isso envolve reunir informações sobre diversos aspectos das populações humanas, como idade, gênero, etnia, educação, renda e migração. Os dados demográficos fornecem informações valiosas sobre a dinâmica populacional, padrões sociais e tendências, essenciais para compreender e planejar em diversos campos, incluindo políticas públicas, saúde e pesquisas de mercado."
+
 
 }
