--- a/public/static/locales/en.json
+++ b/public/static/locales/en.json
@@ -21,5 +21,12 @@
     "address_pt_2": "School of Management, Rua Washington Luis, 855",
     "address_pt_3": "Porto Alegre/RS/Brazil, 90010-460",
     "page_2_title_1": "Current team",
-    "page_2_title_2": "Ex-members"
+    "page_2_title_2": "Ex-members",
+    "page_3_title_1": "Data Profile",
+    "page_3_title_2": "Data dimensions",
+    "page_3_t1_content_1": "The Atlas of Opportunities integrates a wide range of data from different research sources, such as the IBGE, REGIC, and the Central Bank of Brazil. We analyze, process, and deliver quality information at various geographic levels, covering states, cities, and census blocks data. But we don't stop there. To further facilitate your journey of discovery, we use the Urban Systems Smart Cities classification  Citie as a basis. This classification allows us to organize the various variables available on our platform, providing an improved visualization and facilitating the query for data of your specific interest.",
+    "page_3_t1_content_2": "In an increasingly dynamic and competitive world, having up-to-date and accurate information is essential for making strategic decisions. Our platform offers a complete and engaging experience, allowing you to explore business opportunities based on your interests and needs. Join us and gain access to a universe of strategic data. Discover new possibilities, identify trends and drive your success.",
+    "page_3_demo_title": "Demographics",
+    "page_3_demo_content": "The \"demographic data\" dimension refers to the collection, analysis, and interpretation of data related to population characteristics. This involves gathering information on various aspects of human populations, such as age, gender, ethnicity, education, income, and migration. Demographic data provides valuable insights into population dynamics, social patterns, and trends, essential for understanding and planning across various fields, including public policies, healthcare, and market research."
+
 }
