ajustes menu itens

--- a/public/static/locales/en.json
+++ b/public/static/locales/en.json
@@ -1,6 +1,7 @@
 {
     "app_title": "Atlas of Opportunities",
     "active_locale": "en",
+    "menu_0": "Home",
     "menu_1": "The project",
     "menu_2": "Collaborators",
     "menu_3": "Data profile",
