--- a/public/static/locales/pt.json
+++ b/public/static/locales/pt.json
@@ -1,6 +1,7 @@
 {
     "app_title": "Atlas of Oportunidades",
     "active_locale": "pt",
+    "menu_0": "Início",
     "menu_1": "O projeto",
     "menu_2": "Colaboradores",
     "menu_3": "Perfil de dados",
