finalizacao da tela de projeto

--- a/public/static/locales/en.json
+++ b/public/static/locales/en.json
@@ -59,5 +59,6 @@
     "page_4_t1_content_2_label_3": "repository",
     "page_4_t1_content_2_link_3": "https://github.com/gpmc-lab-ufrgs/atlas-of-opportunity",
     "page_4_t1_content_2_pt4": " details the technical development of the Atlas de Oportunidades – Brasil.",
-    "page_4_t1_content_3": "Explore the power of data science and turn your ideas into action. Join us and be part of a community that seeks to drive economic development through intelligent analytics. Welcome to Atlas, where data becomes opportunities!"
+    "page_4_t1_content_3": "Explore the power of data science and turn your ideas into action. Join us and be part of a community that seeks to drive economic development through intelligent analytics. Welcome to Atlas, where data becomes opportunities!",
+    "page_4_t2": "Meet our team"
 }
