--- a/public/static/locales/pt.json
+++ b/public/static/locales/pt.json
@@ -59,5 +59,6 @@
     "page_4_t1_content_2_label_3": "repositório",
     "page_4_t1_content_2_link_3": "https://github.com/gpmc-lab-ufrgs/atlas-of-opportunity",
     "page_4_t1_content_2_pt4": " detalha o desenvolvimento técnico do Atlas de Oportunidades – Brasil.",
-    "page_4_t1_content_3": "Explore o poder da ciência de dados e transforme suas ideias em ações. Junte-se a nós e faça parte de uma comunidade que busca impulsionar o desenvolvimento econômico por meio de análises inteligentes. Seja bem-vindo(a) ao Atlas, onde os dados se transformam em oportunidades!"
+    "page_4_t1_content_3": "Explore o poder da ciência de dados e transforme suas ideias em ações. Junte-se a nós e faça parte de uma comunidade que busca impulsionar o desenvolvimento econômico por meio de análises inteligentes. Seja bem-vindo(a) ao Atlas, onde os dados se transformam em oportunidades!",
+    "page_4_t2": "Conheça nossa equipe"
 }
